--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <a href="#">
-        <h1><img src="./images/Header/WebStudio (1).jpg" alt="logo" /></h1
+        <h1><img src="./images/Header/WebStudio(1).jpg" alt="logo" /></h1
       ></a>
       <nav>
         <ul>
@@ -93,19 +93,19 @@
         <h2>Чем мы занимаемся</h2>
 
         <img
-          src="./images/What are we doing/box 1.jpg"
+          src="./images/Whatarewedoing/1.jpg"
           alt="box2"
           width="370"
           height="294"
         />
         <img
-          src="./images/What are we doing/box 2.jpg"
+          src="./images/Whatarewedoing/2.jpg"
           alt="box2"
           width="370"
           height="294"
         />
         <img
-          src="./images/What are we doing/box 3.jpg"
+          src="./images/Whatarewedoing/3.jpg"
           alt="box3"
           width="370"
           height="294"
@@ -119,7 +119,7 @@
         <ul>
           <li>
             <img
-              src="./images/ouer team/img (1).jpg"
+              src="./images/ouerteam/(1).jpg"
               alt="card1"
               width="270"
               height="260"
@@ -129,7 +129,7 @@
           </li>
           <li>
             <img
-              src="./images/ouer team/img (2).jpg"
+              src="./images/ouerteam/(2).jpg"
               alt="card2"
               width="270"
               height="260"
@@ -139,7 +139,7 @@
           </li>
           <li>
             <img
-              src="./images/ouer team/img (3).jpg"
+              src="./images/ouerteam/(3).jpg"
               alt="card3"
               width="270"
               height="260"
@@ -149,7 +149,7 @@
           </li>
           <li>
             <img
-              src="./images/ouer team/img (4).jpg"
+              src="./images/ouerteam/(4).jpg"
               alt="card4"
               width="270"
               height="260"
@@ -161,7 +161,7 @@
       </section>
     </main>
     <footer>
-      <a href=""><img src="./images/Header/WebStudio (1).jpg" alt="logo" /></a>
+      <a href=""><img src="./images/Header/WebStudio(1).jpg" alt="logo" /></a>
 
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
