--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#">
-        <h1><img src="./images/Header/WebStudio(1).jpg" alt="logo" /></h1
-      ></a>
+      <a href="#"> <img src="./images/Header/WebStudio(1).jpg" alt="logo" /></a>
       <nav>
         <ul>
           <li><a href="студия">студия</a></li>
@@ -18,17 +16,15 @@
           <li><a href="контакты">контакты</a></li>
         </ul>
       </nav>
-      <p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </p>
-      <p>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </p>
+
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <!-- section 1 HERO -->
       <section>
-        <h2>Эффективные решения для вашего бизнеса</h2>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">заказать услугу</button>
       </section>
       <!-- section 2 -->=
@@ -37,53 +33,31 @@
           <ul>
             <li>
               <h3>Внимание к деталям</h3>
-              <ul>
-                <li>
-                  <p>
-                    Идейные соображения, а также начало повседневной работы по
-                    формированию позиции.
-                  </p>
-                </li>
-              </ul>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
             </li>
-          </ul>
-          <ul>
             <li>
               <h3>Пунктуальность</h3>
-              <ul>
-                <li>
-                  <p>
-                    Задача организации, в особенности же рамки и место обучения
-                    кадров влечет за собой.
-                  </p>
-                </li>
-              </ul>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
             </li>
-          </ul>
-          <ul>
             <li>
               <h3>Планирование</h3>
-              <ul>
-                <li>
-                  <p>
-                    Равным образом консультация с широким активом в значительной
-                    степени обуславливает.
-                  </p>
-                </li>
-              </ul>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
             </li>
-          </ul>
-          <ul>
             <li>
               <h3>Современные технологии</h3>
-              <ul>
-                <li>
-                  <p>
-                    Значимость этих проблем настолько очевидна, что реализация
-                    плановых заданий.
-                  </p>
-                </li>
-              </ul>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
             </li>
           </ul>
         </div>
