--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#"> <img src="./images/Header/WebStudio(1).jpg" alt="logo" /></a>
+      <a href="#"> <img src="./images/Header/WebStudio1.jpg" alt="logo" /></a>
       <nav>
         <ul>
           <li><a href="студия">студия</a></li>
