--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
         <h2>Чем мы занимаемся</h2>
 
         <img
-          src="./images/Whatarewedoing/1.jpg"
+          src="./images/Whatarewedoing/box1.jpg"
+          alt="box1"
+          width="370"
+          height="294"
+        />
+        <img
+          src="./images/Whatarewedoing/box2.jpg"
           alt="box2"
           width="370"
           height="294"
         />
         <img
-          src="./images/Whatarewedoing/2.jpg"
-          alt="box2"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/Whatarewedoing/3.jpg"
+          src="./images/Whatarewedoing/box3.jpg"
           alt="box3"
           width="370"
           height="294"
@@ -93,7 +93,7 @@
         <ul>
           <li>
             <img
-              src="./images/ouerteam/(1).jpg"
+              src="./images/ouerteam/img1.jpg"
               alt="card1"
               width="270"
               height="260"
@@ -103,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/ouerteam/(2).jpg"
+              src="./images/ouerteam/img2.jpg"
               alt="card2"
               width="270"
               height="260"
@@ -113,7 +113,7 @@
           </li>
           <li>
             <img
-              src="./images/ouerteam/(3).jpg"
+              src="./images/ouerteam/img3.jpg"
               alt="card3"
               width="270"
               height="260"
@@ -123,7 +123,7 @@
           </li>
           <li>
             <img
-              src="./images/ouerteam/(4).jpg"
+              src="./images/ouerteam/img4.jpg"
               alt="card4"
               width="270"
               height="260"
