--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <a href="#"> <img src="./images/Header/WebStudio1.jpg" alt="logo" /></a>
       <nav>
         <ul>
-          <li><a href="студия">студия</a></li>
-          <li><a href="портфолио">портфолио</a></li>
-          <li><a href="контакты">контакты</a></li>
+          <li><a href="студия">Студия</a></li>
+          <li><a href="портфолио">Портфолио</a></li>
+          <li><a href="контакты">Контакты</a></li>
         </ul>
       </nav>
 
@@ -65,25 +65,32 @@
       <!-- section 3 -->
       <section>
         <h2>Чем мы занимаемся</h2>
-
-        <img
-          src="./images/Whatarewedoing/box1.jpg"
-          alt="box1"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/Whatarewedoing/box2.jpg"
-          alt="box2"
-          width="370"
-          height="294"
-        />
-        <img
-          src="./images/Whatarewedoing/box3.jpg"
-          alt="box3"
-          width="370"
-          height="294"
-        />
+        <ul>
+          <li>
+            <img
+              src="./images/Whatarewedoing/box1.jpg"
+              alt="box1"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/Whatarewedoing/box2.jpg"
+              alt="box2"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/Whatarewedoing/box3.jpg"
+              alt="box3"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
       </section>
 
       <!-- section 4 -->
@@ -135,14 +142,14 @@
       </section>
     </main>
     <footer>
-      <a href=""><img src="./images/Header/WebStudio(1).jpg" alt="logo" /></a>
+      <a href=""><img src="./images/Header/WebStudio1.jpg" alt="logo" /></a>
 
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
 
-        <p><a href="mailto:info@example.com">info@example.com</a></p>
+        <a href="mailto:info@example.com">info@example.com</a>
 
-        <p><a href="tel:+380991111111">+38 099 111 11 11</a></p>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
