--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="#"> <img src="./images/Header/WebStudio1.jpg" alt="logo" /></a>
+      <a href="#">WebStudio</a>
       <nav>
         <ul>
           <li><a href="студия">Студия</a></li>
@@ -142,7 +142,7 @@
       </section>
     </main>
     <footer>
-      <a href=""><img src="./images/Header/WebStudio1.jpg" alt="logo" /></a>
+      <a href="">WebStudio</a>
 
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
